Fixed size of screen on mobile. Added 'expert' diffuculity

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
   body {
     margin: 0;
+    height: 100vh;
   }
 }
